--- a/html/pfappserver/root/configuration/portal_config.tt
+++ b/html/pfappserver/root/configuration/portal_config.tt
@@ -1,16 +1,16 @@
 <div class="documentation">
-  <h1>[% l('Advanced Access Configuration') %]</h1>
+  <h1><i class="icon-list-alt"></i> [% l('Advanced Access Configuration') %]</h1>
 
   <p> [% l('Access control decisions in PacketFence can be modified through advanced parameters. Among them, there are:') %]</p>
 
-  <ul>
-    <li>1. <b>[% l('Captive Portal:') %]</b> [% l('This is for changing global captive-portal parameters;') %]</li>
-    <li>2. <b>[% l('Filter Engines:') %]</b> [% l('PacketFence allows you to create advanced filtering rules based on RADIUS, DHCP, DNS or HTTP information. It also allows you to define advanced role-mapping or VLAN-mapping rules;') %]</li>
-    <li>3. <b>[% l('Billing Tiers:') %]</b> [% l('This allows PacketFence to define tiers for billing engines integration.') %]</li>
-    <li>4. <b>[% l('PKI Provider:') %]</b> [% l('When provisioning in EAP-TLS, PacketFence needs to be configured to integrate with PKI infrastructure. This is done in this module;') %]</li>
-    <li>5. <b>[% l('Provisioners:') %]</b> [% l('PacketFence can "push" provisioning agents on endpoints to auto-configure the WiFi connection during the registration process. You can configure the provisioning agents in this module;') %]</li>
-    <li>6. <b>[% l('Portal Modules:') %]</b> [% l('The module allows you to deeply customize the captive portal workflows;') %]</li>
-    <li>7. <b>[% l('Access Duration:') %]</b> [% l('This allows you to set the various access duration that will be available in your actions definition from your authentication sources;') %]</li>
-    <li>8. <b>[% l('Device Registration:') %]</b> [% l('This allows you to enable the device registration feature in PacketFence - which allows users to manually register endpoints from a portal page.') %]</li>
-  </ul>
+  <dl>
+    <dt>[% l('Captive Portal:') %]</dt> <dd>[% l('This is for changing global captive-portal parameters;') %]</dd>
+    <dt>[% l('Filter Engines:') %]</dt> <dd>[% l('PacketFence allows you to create advanced filtering rules based on RADIUS, DHCP, DNS or HTTP information. It also allows you to define advanced role-mapping or VLAN-mapping rules;') %]</dd>
+    <dt>[% l('Billing Tiers:') %]</dt> <dd>[% l('This allows PacketFence to define tiers for billing engines integration.') %]</dd>
+    <dt>[% l('PKI Provider:') %]</dt> <dd>[% l('When provisioning in EAP-TLS, PacketFence needs to be configured to integrate with PKI infrastructure. This is done in this module;') %]</dd>
+    <dt>[% l('Provisioners:') %]</dt> <dd>[% l('PacketFence can "push" provisioning agents on endpoints to auto-configure the WiFi connection during the registration process. You can configure the provisioning agents in this module;') %]</dd>
+    <dt>[% l('Portal Modules:') %]</dt> <dd>[% l('The module allows you to deeply customize the captive portal workflows;') %]</dd>
+    <dt>[% l('Access Duration:') %]</dt> <dd>[% l('This allows you to set the various access duration that will be available in your actions definition from your authentication sources;') %]</dd>
+    <dt>[% l('Device Registration:') %]</dt> <dd>[% l('This allows you to enable the device registration feature in PacketFence - which allows users to manually register endpoints from a portal page.') %]</dd>
+  </dl>
 </div>
