--- a/html/pfappserver/root/configuration/system_config.tt
+++ b/html/pfappserver/root/configuration/system_config.tt
@@ -1,13 +1,13 @@
 <div class="documentation">
-  <h1>[% l('System Configuration') %]</h1>
+  <h1><i class="icon-cogs"></i> [% l('System Configuration') %]</h1>
 
   <p>[% l('PacketFence allows you to perform advanced system configuration. Among the configuration options, there are:') %]</p>
 
-  <ul>
-    <li>1. <b>[% l('Main Configuration:') %]</b> [% l('This allows you set the DNS name, SMTP information for alerts, default language and more;') %]</li>
-    <li>2. <b>[% l('Database:') %]</b> [% l('PacketFence makes use of a MySQL/MariaDB database. You can configure the connection information from this module;') %]</li>
-    <li>3. <b>[% l('Cluster:') %]</b> [% l('PacketFence supports clustering of 3+ members. You can configure the clustering solution from this module;') %]</li>
-    <li>4. <b>[% l('Authentication Methods:') %]</b> [% l('EAP methods provided by PacketFence can be changed from this module;') %]</li>
-    <li>5. <b>[% l('Admin Access:') %]</b> [% l('Different access level can be defined for the PacketFence administrative interface from this module.') %]</li>
-  </ul>
+  <dl>
+    <dt>[% l('Main Configuration:') %]</dt> <dd>[% l('This allows you set the DNS name, SMTP information for alerts, default language and more;') %]</dd>
+    <dt>[% l('Database:') %]</dt> <dd>[% l('PacketFence makes use of a MySQL/MariaDB database. You can configure the connection information from this module;') %]</dd>
+    <dt>[% l('Cluster:') %]</dt> <dd>[% l('PacketFence supports clustering of 3+ members. You can configure the clustering solution from this module;') %]</dd>
+    <dt>[% l('Authentication Methods:') %]</dt> <dd>[% l('EAP methods provided by PacketFence can be changed from this module;') %]</dd>
+    <dt>[% l('Admin Access:') %]</dt> <dd>[% l('Different access level can be defined for the PacketFence administrative interface from this module.') %]</dd>
+  </dl>
 </div>
