--- a/html/pfappserver/root/static/scss/_documentation.scss
+++ b/html/pfappserver/root/static/scss/_documentation.scss
@@ -1,6 +1,19 @@
 /// _documentation.scss -*- Mode: scss; indent-tabs-mode: nil; basic-offset: 2 -*-
 
 .documentation {
-  @extend .offset4;
-  @extend .span14;
+  ul, dl {
+    list-style: none;
+    margin-left: 2em;
+  }
+
+  li, dt {
+    border-top: 1px solid lighten($grayLight, 20%);
+    padding-top: 1em;
+    margin-top: 1em;
+  }
+
+  li:first-child, dt:first-child {
+    border-top: none;
+  }
 }
+
