--- a/html/pfappserver/root/admin/nodes.tt
+++ b/html/pfappserver/root/admin/nodes.tt
@@ -457,9 +457,9 @@
             </form>
           </div>
 
-          <div class="loader span12"><p><img src="[% c.uri_for('/static/app/loader-48.gif') %]"></p></div>
-            <div class="nodes card-block" id="section">
-            </div>
+          <div class="loader"><i class="icon"></i></div>
+          <div class="nodes card-block" id="section">
+          </div>
         </div><!--/span-->
       </div><!--/row-->
     </div><!--/.fluid-container-->
