--- a/html/pfappserver/root/admin/reports.tt
+++ b/html/pfappserver/root/admin/reports.tt
@@ -44,7 +44,7 @@
       <div class="container-fluid offset3 span15">
 
 
-          <div class="loader"><p><img src="[% c.uri_for('/static/app/loader-48.gif') %]"></p></div>
+          <div class="loader"><i class="icon"></i></div>
           <div id="section" class="card">
             <div class="graph"></div>
           </div>
