--- a/html/pfappserver/root/admin/status.tt
+++ b/html/pfappserver/root/admin/status.tt
@@ -35,7 +35,7 @@
     </div>
     <div class="row-fluid">
       <div class="container-fluid offset3 span15">
-        <div class="loader"><p><img src="[% c.uri_for('/static/app/loader-48.gif') %]"></p></div>
+        <div class="loader"><i class="icon"></i></div>
         <div id="section">
         </div>
       </div><!--/row-->
