--- a/html/pfappserver/root/static/scss/styles.scss
+++ b/html/pfappserver/root/static/scss/styles.scss
@@ -79,6 +79,7 @@
 @import "card";
 @import "clipboard";
 @import "documentation";
+@import "loader";
 
 // Responsive
 @import "bootstrap/responsive";
