--- a/html/pfappserver/root/auditing/radiuslog/search.tt
+++ b/html/pfappserver/root/auditing/radiuslog/search.tt
@@ -16,8 +16,8 @@
                </td>
              </tr>
              <tr>
+               <th></th>
                [% header('auth_status', l('auth_status')) | none %]
-               [% header('details', l('Details')) | none %]
                [% FOREACH display_column IN display_columns  %]
                  [% header(display_column, l(display_column)) | none %]
                [% END %]
@@ -25,24 +25,24 @@
            </thead>
         [% FOREACH item IN items %]
             <tr>
+              <td>
+                <a href="[% c.uri_for(c.controller.action_for('view'), [ item.id ]) %]"><i class="icon-plus-circle"></i></a>
+              </td>
                <td>
-                   [% IF (item.auth_status == 'Reject') %]
-                     <img src="/static/app/red.png">
-                   [% ELSE %]
-                     <img src="/static/app/green.png">
-                   [% END %]
-                    [%item.auth_status %]
+                 [% IF (item.auth_status == 'Reject') %]
+                 <span class="label label-important">[% item.auth_status %]</span>
+                 [% ELSE %]
+                 <span class="label label-success">[% item.auth_status %]</span>
+                 [% END %]
                </td>
-               <td class="item"><a href="[% c.uri_for(c.controller.action_for('view'), [ item.id ]) %]">Details</a></td>
                [% FOREACH display_column IN display_columns  %]
                  [% IF display_column == 'mac' %]
                  <td class="node">
                   <a href="[% c.uri_for(c.controller('Node').action_for('view'), [ item.$display_column ]) %]">[% item.$display_column %]</a>
                  </td>
                  [% ELSE %]
-                   <td> [%item.$display_column %] </td>
+                   <td> [% item.$display_column %] </td>
                  [% END %]
-                </td>
                [% END %]
             </tr>
         [% END %]
