--- a/addons/AD/resolv.tt
+++ b/addons/AD/resolv.tt
@@ -1,2 +1,4 @@
 search [% dns_name %]
-nameserver [% dns_servers %]
+[% FOREACH dns_server IN dns_servers %]
+nameserver [% dns_server %]
+[% END %]
