--- a/html/pfappserver/root/service/status.tt
+++ b/html/pfappserver/root/service/status.tt
@@ -10,7 +10,7 @@
   </div>
 </div>
 <div class="card">
-  <h2 class="card-title">[% l('Services') %]</h2>
+  <h2 class="card-title">[% l('Services on:') %] [% server_hostname %]</h2>
     <div class="form-actions">
       <div class="pull-right">
         <button type="submit" class="btn btn-danger" data-toggle="modal" data-confirm-stop-href="[%c.uri_for(c.controller.action_for('stop'),['pf'])%]" data-target="#confirmStop" ><i class="icon-fixed-width icon-stop"></i> [% l('Stop All') %]</button>
