--- a/html/pfappserver/root/admin/status.tt
+++ b/html/pfappserver/root/admin/status.tt
@@ -35,7 +35,6 @@
     </div>
     <div class="row-fluid">
       <div class="container-fluid offset3 span15">
-        <div class="loader"><i class="icon"></i></div>
-        <div id="section">
+        <div id="section" class="card">
         </div>
       </div><!--/row-->
