--- a/html/pfappserver/root/static/scss/_loader.scss
+++ b/html/pfappserver/root/static/scss/_loader.scss
@@ -1,13 +1,24 @@
 /// _loader.scss -*- Mode: scss; indent-tabs-mode: nil; basic-offset: 2 -*-
 
 .loader {
-    position: fixed;
-    margin-top: 10px;
-    @extend .offset6;
+  background-color: rgba(0, 0, 0, 0.04);
+  opacity: 0;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  text-align: center;
 
-    i {
-      @extend .icon-spin;
-      @extend .icon-2x;
-      @extend .icon-circle-o-notch;
-    }
+  div {
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
+  }
+
+  i {
+    @extend .icon-spin;
+    @extend .icon-2x;
+    @extend .icon-circle-o-notch;
+  }
 }
