--- a/html/pfappserver/root/static/scss/_dropdowns.scss
+++ b/html/pfappserver/root/static/scss/_dropdowns.scss
@@ -3,3 +3,14 @@
 .nav-header .dropdown-menu {
   text-transform: none;
 }
+
+.dropdown-unselectable {
+  // See .dropdown-menu > li > a
+  display: block;
+  padding: 3px 20px;
+  clear: both;
+  font-weight: normal;
+  line-height: $baseLineHeight;
+  color: $dropdownLinkColor;
+  white-space: nowrap;
+}
