--- a/html/pfappserver/root/configuration/define_policy.tt
+++ b/html/pfappserver/root/configuration/define_policy.tt
@@ -6,10 +6,10 @@
   <p>[% l('For PacketFence to work properly, you must define in the following order:') %]</p>
 
   <dl>
-    <dt>[% l('Roles:') %]</dt> <dd>[% l('A role will allow PacketFence to grant different network access to endpoints connecting to your network. For example, employee vs. guest;') %]</dd>
-    <dt>[% l('Domains:') %]</dt> <dd> [% l('If you want to authenticate users or machines using a Active Directory Domain Controller (DC), you have to join the PacketFence server to the DC;') %]</dd>
-    <dt>[% l('Sources:') %]</dt> <dd>[% l('Authentication sources will allow you to identify users and assign them roles and access durations;') %]</dd>
-    <dt>[% l('Switches:') %]</dt> <dd>[% l('PacketFence manages switches, access points and WiFi controllers. You have to add the equipment you want PacketFence to manage and do the role by VLAN/ACL/policy identifier mapping;') %]</dd>
+    <dt>[% l('Roles:') %]</dt> <dd>[% l('A role will allow PacketFence to grant different network access to endpoints connecting to your network. For example, employee vs. guest.') %]</dd>
+    <dt>[% l('Domains:') %]</dt> <dd> [% l('If you want to authenticate users or machines using a Active Directory Domain Controller (DC), you have to join the PacketFence server to the DC.') %]</dd>
+    <dt>[% l('Sources:') %]</dt> <dd>[% l('Authentication sources will allow you to identify users and assign them roles and access durations.') %]</dd>
+    <dt>[% l('Switches:') %]</dt> <dd>[% l('PacketFence manages switches, access points and WiFi controllers. You have to add the equipment you want PacketFence to manage and do the role by VLAN/ACL/policy identifier mapping.') %]</dd>
     <dt>[% l('Connection Profiles:') %]</dt> <dd>[% l('When devices are connecting to your network, you might want to show a captive portal or auto-register the device. You can control the behavior in this module.') %]</dd>
   </dl>
 </div>
