--- a/html/pfappserver/root/authentication/source/type/AD.tt
+++ b/html/pfappserver/root/authentication/source/type/AD.tt
@@ -14,7 +14,10 @@
         <div class="control-group">
           <label class="control-label">[% l('Password') %] <i class="icon-required"></i></label>
           <div class="controls">
+            <div class="input-append">
             [% form.field('password').render_element | none %]
+            <button class="btn" type="button"><i class="icon-eye"></i></button>
+            </div>
             <a class="btn" id="testSource" href="[% c.uri_for(c.controller('Config::Authentication::Source').action_for('test'), [source.type]) %]">[% l('Test') %]</a>
           </div>
         </div>
