(web admin) Add .icon-windowslive CSS class

--- a/html/pfappserver/root/static/scss/_icon.scss
+++ b/html/pfappserver/root/static/scss/_icon.scss
@@ -30,3 +30,10 @@ $fa-line-height-base: 1;
   font-size: 50%;
   vertical-align: super;
 }
+
+/**
+ * Alias for Windows Live oauth source
+ */
+.icon-windowslive {
+  @extend .icon-windows;
+}
