--- a/html/pfappserver/root/admin/auditing.tt
+++ b/html/pfappserver/root/admin/auditing.tt
@@ -45,7 +45,7 @@
   </div>
 </div>
 <div class="row-fluid">
-  <div class="container-fluid offset4 span14">
+  <div class="container-fluid offset4 span14 span18-navbarcollapse">
     <div id="section" class="card">
     </div>
   </div><!--/.container-fluid-->
