--- a/html/pfappserver/root/admin/reports.tt
+++ b/html/pfappserver/root/admin/reports.tt
@@ -41,7 +41,7 @@
     </div>
 
     <div class="row-fluid">
-      <div class="container-fluid offset3 span15">
+      <div class="container-fluid offset3 span15 span18-navbarcollapse">
         <div id="section" class="card">
             <div class="graph"></div>
           </div>
