--- a/html/pfappserver/root/admin/status.tt
+++ b/html/pfappserver/root/admin/status.tt
@@ -34,7 +34,7 @@
       </div><!--/span-->
     </div>
     <div class="row-fluid">
-      <div class="container-fluid offset3 span15">
+      <div class="container-fluid offset3 span15 span18-navbarcollapse">
         <div id="section" class="card">
         </div>
       </div><!--/row-->
