(web admin) Fix display of saved searches
Fixes #2276

--- a/html/pfappserver/root/admin/nodes.tt
+++ b/html/pfappserver/root/admin/nodes.tt
@@ -304,7 +304,7 @@
                     formTarget = '#simpleNodeSearch';
                 END%]
               <li>
-                <a href="#" data-toggle="pf-search-form" data-target="[% tab | html %]" [% IF formTarget %] data-form-target="[% formTarget %]"  [% END %]   >[% ss.name %] <span class="saved_search_trash pull-right" data-href="[% c.uri_for(c.controller('SavedSearch::Node').action_for('remove'),[ss.id])  %]"><i class="icon-trash"></i></span></a>
+                <a href="#" data-toggle="pf-search-form" data-target="[% tab | html %]" [% IF formTarget %] data-form-target="[% formTarget %]"[% END %]><span class="saved_search_trash pull-right" data-href="[% c.uri_for(c.controller('SavedSearch::Node').action_for('remove'),[ss.id])  %]"><i class="icon-trash"></i></span>[% ss.name %] </a>
                 <form>
                   [%FOREACH input IN form.keys.sort%]
                   <input type="hidden" name="[%input | html %]" value="[%form.$input | html%]"/>
