--- a/html/pfappserver/root/admin/users.tt
+++ b/html/pfappserver/root/admin/users.tt
@@ -38,7 +38,7 @@
                   formTarget = '#simpleUserSearch';
                   END %]
                   <li>
-                    <a href="#" data-toggle="pf-search-form" data-form-target="[% formTarget %]" data-target="[%tab%]">[% ss.name %] <span class="saved_search_trash pull-right" data-href="[% c.uri_for(c.controller('SavedSearch::User').action_for('remove'),[ss.id])  %]"><i class="icon-trash"></i></span> </a>
+                    <a href="#" data-toggle="pf-search-form" data-form-target="[% formTarget %]" data-target="[%tab%]"><span class="saved_search_trash pull-right" data-href="[% c.uri_for(c.controller('SavedSearch::User').action_for('remove'),[ss.id])  %]"><i class="icon-trash"></i></span>[% ss.name %]</a>
                     <form>
                       [%FOREACH input IN form.keys.sort%]
                       <input type="hidden" name="[%input | html%]" value="[%form.$input | html%]"/>
