(web admin) Improve layout of sortable divs
aka "dynamic list sortable" ..

--- a/html/pfappserver/root/static/scss/styles.scss
+++ b/html/pfappserver/root/static/scss/styles.scss
@@ -80,6 +80,7 @@
 @import "clipboard";
 @import "documentation";
 @import "loader";
+@import "sortable";
 
 // Responsive
 @import "bootstrap/responsive";
