--- a/html/pfappserver/root/authentication/source/type/Pinterest.tt
+++ b/html/pfappserver/root/authentication/source/type/Pinterest.tt
@@ -1,6 +1,7 @@
 [% form.field('client_id').render | none %]
 [% form.field('client_secret').render | none %]
 [% form.field('site').render | none %]
+[% form.field('authorize_path').render | none %]
 [% form.field('access_token_path').render | none %]
 [% form.field('access_token_param').render | none %]
 [% form.field('scope').render | none %]
