--- a/html/captive-portal/templates/device-registration/landing.html
+++ b/html/captive-portal/templates/device-registration/landing.html
@@ -14,3 +14,13 @@
     </a>
   </div>
 </div>
+<div class="layout layout--center">
+  <div class="layout__item u-2/3 u-1/1-palm">
+    <a href="/status" class="btn btn--full btn--light">
+      <div class="flag">
+        <div class="flag__img">[% svgIcon(id='ic_account_circle_black_24px',size='small') %]</div>
+        <p class="flag__body">[% i18n("Manage registered devices") %]</p>
+      </div>
+    </a>
+  </div>
+</div>
