--- a/html/captive-portal/templates/device-registration/landing.html
+++ b/html/captive-portal/templates/device-registration/landing.html
@@ -5,7 +5,7 @@
 </div>
 [% END %]
 <div class="layout layout--center">
-  <div class="layout__item u-2/3 u-1/1-palm">
+  <div class="layout__item u-mt u-2/3 u-1/1-palm">
     <a href="/device-registration" class="btn btn--full btn--light">
       <div class="flag">
         <div class="flag__img">[% svgIcon(id='ic_add_circle_black_24px',size='small') %]</div>
@@ -15,7 +15,7 @@
   </div>
 </div>
 <div class="layout layout--center">
-  <div class="layout__item u-2/3 u-1/1-palm">
+  <div class="layout__item u-mt u-2/3 u-1/1-palm">
     <a href="/status" class="btn btn--full btn--light">
       <div class="flag">
         <div class="flag__img">[% svgIcon(id='ic_account_circle_black_24px',size='small') %]</div>
