--- a/html/captive-portal/templates/device-registration/registration.html
+++ b/html/captive-portal/templates/device-registration/registration.html
@@ -40,7 +40,7 @@
   </div>
 </form>
 <div class="layout layout--center">
-  <div class="layout__item u-2/3 u-1/1-palm">
+  <div class="layout__item u-mt u-2/3 u-1/1-palm">
     <a href="/status" class="btn btn--full btn--light">
       <div class="flag">
         <div class="flag__img">[% svgIcon(id='ic_account_circle_black_24px',size='small') %]</div>
