--- a/html/captive-portal/templates/status.html
+++ b/html/captive-portal/templates/status.html
@@ -203,7 +203,7 @@ $(document).ready(function() {
 </div>
 [% END %]
 <div class="layout layout--center">
-  <div class="layout__item u-2/3 u-1/1-palm">
+  <div class="layout__item u-mt u-2/3 u-1/1-palm">
     <a href="/device-registration" class="btn btn--full btn--light">
       <div class="flag">
         <div class="flag__img">[% svgIcon(id='ic_add_circle_black_24px',size='small') %]</div>
@@ -214,7 +214,7 @@ $(document).ready(function() {
 </div>
 [% UNLESS showLogin %]
 <div class="layout layout--center">
-  <div class="layout__item u-2/3 u-1/1-palm">
+  <div class="layout__item u-mt u-2/3 u-1/1-palm">
     <a href="/status/logout" class="btn btn--full btn--light">
       <div class="flag">
         <div class="flag__img">[% svgIcon(id='ic_close_black_24px',size='small') %]</div>
