--- a/html/pfappserver/root/admin/users.tt
+++ b/html/pfappserver/root/admin/users.tt
@@ -81,7 +81,7 @@
                     <div class="btn-group pull-right">
                       <button class="btn btn-primary"><i class="icon-search icon-white"></i> [% l('Search') %]</button>
                       <a class="btn btn-primary dropdown-toggle" data-toggle="dropdown"><span class="caret"></span></a>
-                      <ul class="dropdown-menu up">
+                      <ul class="dropdown-menu">
                         <li><a href="#" data-export-url="[% c.uri_for(c.controller('User').action_for('simple_search')) %]" data-export-form="#simpleUserSearch" class="exportCSVBtn">[% l('Export to CSV') %]</a></li>
                         <li><a href="#" id="simpleSavedSearchBtn" >[% l('Save as...') %]</a></li>
                       </ul>
@@ -232,7 +232,7 @@
                           <div class="btn-group pull-right">
                             <button class="btn btn-primary"><i class="icon-search icon-white"></i> [% l('Search') %]</button>
                             <a class="btn btn-primary dropdown-toggle" data-toggle="dropdown"><span class="caret"></span></a>
-                            <ul class="dropdown-menu up">
+                            <ul class="dropdown-menu">
                               <li><a href="#" data-export-url="[% c.uri_for(c.controller('User').action_for('advanced_search')) %]" data-export-form="#advancedUserSearch" class="exportCSVBtn">[% l('Export to CSV') %]</a></li>
                               <li><a id="advancedSavedSearchBtn">[% l('Save as...') %]</a></li>
                             </ul>
