--- a/html/pfappserver/root/config/scan/index.tt
+++ b/html/pfappserver/root/config/scan/index.tt
@@ -23,7 +23,7 @@
         <div class="form-actions">
           <div class="btn-group">
             <a class="btn dropdown-toggle" data-toggle="dropdown">[% l('Add Scan') %] <span class="caret"></span></a>
-            <ul id="createSource" class="dropdown-menu up">
+            <ul id="createSource" class="dropdown-menu">
               [% FOREACH type IN types -%]
                 [% SET label = "scan_type_$type"%]
                 <li><a class="createItem" href="[% c.uri_for(c.controller.action_for('create_type'), type) %]">[% l(label) %]</a></li>
