--- a/html/pfappserver/root/authentication/source/type/SMS.tt
+++ b/html/pfappserver/root/authentication/source/type/SMS.tt
@@ -1,3 +1,4 @@
 [% form.field('sms_carriers').render | none %]
+[% form.field('pin_code_length').render | none %]
 [% form.field('create_local_account').render | none %]
 [% form.field('local_account_logins').render | none %]
