--- a/html/pfappserver/root/authentication/source/type/Twilio.tt
+++ b/html/pfappserver/root/authentication/source/type/Twilio.tt
@@ -1,3 +1,4 @@
 [% form.field('account_sid').render | none %]
 [% form.field('auth_token').render | none %]
 [% form.field('twilio_phone_number').render | none %]
+[% form.field('pin_code_length').render | none %]
