Add autofocus on PIN field fixes #1995

--- a/html/captive-portal/templates/sms/validate.html
+++ b/html/captive-portal/templates/sms/validate.html
@@ -4,7 +4,7 @@
 
       <div class="input-container">
         <label for="pin">[% i18n("PIN") %]</label>
-        <input id="pin" name="pin" type="text" autocorrect="off" autocapitalize="off" />
+        <input id="pin" name="pin" type="text" autocorrect="off" autocapitalize="off" autofocus />
       </div>
 
       <button type="submit" name="submit" class="btn btn--full u-mt">
