--- a/html/captive-portal/templates/status.html
+++ b/html/captive-portal/templates/status.html
@@ -182,7 +182,7 @@ $(document).ready(function() {
       [% NEXT IF n.status != 'reg' %]
       <tr>
         <td>[% n.mac %]</td>
-        <td class="hidden-popup">[% n.dhcp_fingerprint %]</td>
+        <td class="hidden-popup">[% n.device_class %]</td>
         <td class="hidden-popup">[% n.regdate IF n.regdate != '0000-00-00 00:00:00' %]</td>
         <td style="text-align: right"><a href="/node/manager/unreg/[% n.mac %]" class="btn btn--small">[% i18n("Unregister") %]</a></td>
       </tr>
