--- a/html/pfappserver/root/admin/reports.tt
+++ b/html/pfappserver/root/admin/reports.tt
@@ -31,9 +31,13 @@
               <li class="nav-header">[% l('ACCOUNTING') %]</li>
               [% list_entry('graph/nodebandwidth', 'Top 25 Bandwidth Consumers') | none %]
               [% list_entry('graph/osclassbandwidth', 'Bandwidth per Operating System') | none %]
+              <li class="nav-header">[% l('Other reports') %]</li>
+              [% FOREACH report_id IN builtin_report_ids %]
+              [% list_entry('dynamicreport/' _ report_id, dynamic_reports.$report_id.description) | none %]
+              [% END %]
               <li class="nav-header">[% l('Custom reports') %] [% doc('_custom_reports') | none %]</li>
-              [% FOREACH report_id IN dynamic_reports.keys %]
-              [% list_entry('dynamicreport/' _ report_id, dynamic_reports.$report_id) | none %]
+              [% FOREACH report_id IN custom_report_ids %]
+              [% list_entry('dynamicreport/' _ report_id, dynamic_reports.$report_id.description) | none %]
               [% END %]
             </ul>
           </div><!--/.well -->
