--- a/html/pfappserver/root/config/source/index.tt
+++ b/html/pfappserver/root/config/source/index.tt
@@ -1,7 +1,7 @@
 [% MACRO source_create(id, heading, types) BLOCK %]
       <li class="dropdown-submenu">
         <a tabindex="-1">[% l(heading) %]</a>
-        <ul class="dropdown-menu" id="[% id %]">
+        <ul class="dropdown-menu up" id="[% id %]">
           [% FOREACH type IN types.sort -%]
             <li><a href="[% c.pf_hash_for(c.controller.action_for('create_type'), type) %]">[% l(type) %]</a></li>
           [% END -%]
@@ -51,8 +51,8 @@
   [%- IF can_access("USERS_SOURCES_CREATE") %]
   <div class="form-actions">
     <div class="btn-group">
-      <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">[% l('Add source') %] <span class="caret"></span></a>
-      <ul id="createSource" class="dropdown-menu">
+      <a class="btn dropdown-toggle" data-toggle="dropdown">[% l('Add source') %] <span class="caret"></span></a>
+      <ul id="createSource" class="dropdown-menu up">
         [% source_create('internal_types', 'Internal', internal_types) | none %]
         [% source_create('external_types', 'External', external_types) | none %]
         [% source_create('exclusive_types', 'Exclusive', exclusive_types) | none %]
