--- a/html/pfappserver/root/authentication/source/type/Twilio.tt
+++ b/html/pfappserver/root/authentication/source/type/Twilio.tt
@@ -2,3 +2,5 @@
 [% form.field('auth_token').render | none %]
 [% form.field('twilio_phone_number').render | none %]
 [% form.field('pin_code_length').render | none %]
+[% form.field('create_local_account').render | none %]
+[% form.field('local_account_logins').render | none %]
